# mokovaya

./: .env.example  README.md  pyproject.toml  requirements.txt
bot/: main.py  states.py  validators.py
bot/handlers/: edit_profile.py  menu.py  queue.py  start.py  tasks.py
bot/middlewares/: db.py  throttling.py
config/: settings.py
db/: base.py  models.py
docs/superpowers/plans/: 2026-07-12-mock-interview-bot.md
docs/superpowers/specs/: 2026-07-12-mock-interview-bot-design.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_add_profile_updated_at.py
services/: matching.py  tasks.py
tests/: conftest.py  test_db_middleware.py  test_edit_profile_handler.py  test_main.py  test_matching.py  test_menu.py  test_models.py  test_queue_handler.py  test_settings.py  test_start_handler.py  test_tasks.py  test_tasks_handler.py  test_throttling_middleware.py
