[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mokovaya-bot"
version = "0.1.0"
description = "Telegram bot for peer-to-peer algorithmic mock interviews"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "aiosqlite>=0.19",
]

[tool.setuptools.packages.find]
include = ["bot*", "services*", "db*", "config*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
